Fix spacing between nav bar and Currently Reading section

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,11 @@ body,
   }
 }
 
+.bookshelf:first-of-type h2 {
+  margin-top: 0;
+  padding-top: 0.83em;
+}
+
 .bookshelf-books {
   text-align: center;
 }
